# fdk-crawler

./: .cspell.json  README.md  README.org  fdk_crawler.code-workspace  pyproject.toml  runner.py  scrapy.cfg
mgb/: api.py  extract.py
mgb/tests/: tests_extractor.py
sbb/: items.py  middlewares.py  pipelines.py  settings.py
sbb/reader/: json_reader.py
sbb/spiders/: fdk_spider.py
